--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ h2 {font-family : Neucha, cursive; color: black;}
 </style>
 <body>
 
-<a href="https://imgur.com/OozqIlq"><img src="https://i.imgur.com/OozqIlq.jpg" title="source: imgur.com" /></a>
+<a href="https://imgur.com/OozqIlq"><img src="https://i.imgur.com/OozqIlq.jpg"/></a>
 </body>
 </html>
