--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ body {font-family: 'Covered By Your Grace'; color: grey;}
 h2 {font-family : Neucha, cursive; color: black;}
 </style>
 <body>
+  <img src="https://i.imgur.com/OozqIlq.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
 
-<a href width="1920" height="1080"="https://imgur.com/OozqIlq"><img src="https://i.imgur.com/OozqIlq.jpg"/></a>
+
 </body>
 </html>
