--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {font-family: 'Covered By Your Grace'; color: grey;}
 h2 {font-family : Neucha, cursive; color: black;}
 </style>
 <body>
-  <img src="https://i.imgur.com/jDTOpLN.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+  <img src="https://i.imgur.com/0d0UkZT.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
 
 
 </body>
